Переписанная hashMap в классе известных личностей